--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-    <html class="text-center sm:text-left h-full flex flex-col justify-center bg-back">
-        <link href="/stylesheets/main.css" rel="stylesheet">
-        <div class="h-24 flex flex-col justify-center bg-maroon">
-            <h1 class="flex text-white">Recommended</h1>
+<html class="text-center sm:text-left h-full bg-back">
+    <link href="/stylesheets/main.css" rel="stylesheet">
+    <body class="h-full flex flex-col">
+        <!--Navbar-->
+        <div class="h-24 flex flex-row justify-between items-center bg-gradient-to-r from-maroon to-maroon-dark shadow-xl">
+            <img
+                src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
+                class="object-contain object-left ml-8 flex h-12"
+            />
+            <img 
+                src="https://cdn.discordapp.com/attachments/1286925382632865804/1289845144043913226/Dormke_hwite.png?ex=66fa4d66&is=66f8fbe6&hm=819efbca18632d3d582433282bea5a98850b9a21069a1c30ed4119ddb7d517e1&"
+                class="object-contain h-full"
+            />
+            <img
+                src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
+                class="object-contain object-right mr-8 h-12 flex"
+            />
         </div>
-        <body class="h-full">
-            <div>
-                <h1>Content goes here</h1>
+
+        <!--Content-->
+        <div class="flex flex-row justify-center">
+            <!--Card Container-->
+            <div class="mx-8 h-full flex flex-col justify-center bg-scroll">
+                <!--Card-->
+                <div class="mx-8 mt-24 max-w-sm w-full lg:max-w-full lg:flex shadow-md">
+                    <img
+                        src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg"
+                        class="h-48 object-none object-center lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
+                    />
+                    <div class="h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                    <div class="mb-8">
+                        <div class="text-gray-900 font-bold text-xl mb-2">Can coffee make you a better developer?</div>
+                        <p class="text-gray-700 text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                    </div>
+                    </div>
+                </div>
             </div>
-        </body>
-    </html>
+        </div>
+    </body>
+</html>
