--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html class="text-center sm:text-left h-full bg-back">
     <link href="/stylesheets/main.css" rel="stylesheet">
-    <body class="h-full flex flex-col">
-        <!--Navbar-->
-        <div class="h-24 flex flex-row justify-between items-center bg-gradient-to-r from-maroon to-maroon-dark shadow-xl">
+    <body class="h-full flex flex-col bg-back">
+        {/*--Navbar--*/}
+        <div class="h-24 flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-2xl">
             <img
                 src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
                 class="object-contain object-left ml-8 flex h-12"
             />
             <img 
-                src="https://cdn.discordapp.com/attachments/1286925382632865804/1289845144043913226/Dormke_hwite.png?ex=66fa4d66&is=66f8fbe6&hm=819efbca18632d3d582433282bea5a98850b9a21069a1c30ed4119ddb7d517e1&"
+                src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
                 class="object-contain h-full"
             />
             <img
@@ -18,21 +18,55 @@
             />
         </div>
 
-        <!--Content-->
+        {/*--Content--*/}
         <div class="flex flex-row justify-center">
-            <!--Card Container-->
-            <div class="mx-8 h-full flex flex-col justify-center bg-scroll">
-                <!--Card-->
-                <div class="mx-8 mt-24 max-w-sm w-full lg:max-w-full lg:flex shadow-md">
-                    <img
-                        src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg"
-                        class="h-48 object-none object-center lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
-                    />
-                    <div class="h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
-                    <div class="mb-8">
-                        <div class="text-gray-900 font-bold text-xl mb-2">Can coffee make you a better developer?</div>
-                        <p class="text-gray-700 text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+            {/*--Card Container--*/}
+            <div class="mx-32 h-full flex flex-col justify-center bg-scroll shadow-lg">
+                {/*--Card--*/}
+                <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-md">
+                    <div className="lg:h-auto lg:w-48 flex-none bg-cover rounded-l-lg lg:rounded-l-lg border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white text-center overflow-hidden">
+                      <img
+                          src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg"
+                          class="h-full object-none object-center shaowd-lg"
+                      />
                     </div>
+                    <div className="flex flex-row h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal">
+                      
+                      {/*Text within card*/}
+                      <div class="h-full pl-4 pr-24 flex flex-col justify-between leading-normal">
+                        {/*header and bio*/}
+                        <div class="h-full">
+                            <div class="text-gray-900 font-bold text-2xl mb-2">Can coffee make you a better developer?</div>
+                            <p class="text-gray-700 text-base h-full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                        </div>
+
+                        {/*tags*/}
+                        <div class="flex flex-row justify-around mr-24">
+                          <p>
+                            Major:
+                          </p>
+                          <p>
+                            Dorm:
+                          </p>
+                          <p>
+                            Gender:
+                          </p>
+                          <p>
+                            Year:
+                          </p>
+                          <p>
+                            Age:
+                          </p>
+                        </div>
+
+                      </div>
+                      {/*like button*/}
+                      <div class="flex items-center justify-center">
+                        <img
+                          src="https://cdn.discordapp.com/attachments/1280355262976360490/1290027947482288191/Check_mark.png?ex=66faf7a6&is=66f9a626&hm=d7d8ee8476aa37a3ceb9623064375c4dab6cb5106977930bb76e49e024a7e419&"
+                          class="object-contain h-24 mx-24"
+                        />
+                      </div>
                     </div>
                 </div>
             </div>
