--- a/website2/views/signIn.ejs
+++ b/website2/views/signIn.ejs
@@ -10,7 +10,7 @@
             className="object-fill mx-auto h-10 w-auto"
           />
         </div>
-
+        <% process.env.hello %>
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
           <form class="space-y-6" action="/login" method="POST">
             <div>
