--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -27,9 +27,11 @@
               <div class="bg-back mb-30 p-10">
               </div>
                 <!--Card-->
+
+                <% console.log(users[0]) %>
                 <% users.forEach(function(user) { %>
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg">
-                    <div className="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
+                    <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
                       <img
                           src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg"
                           class="h-full object-none object-center shaowd-lg rounded-l lg:rounded-l lg:rounded-t"
@@ -37,7 +39,7 @@
                     </div>
 
                     <!---->
-                    <div className="flex flex-row h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal">
+                    <div class="flex flex-row h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal">
                       
                         <!--Text within card-->
                       <div class="h-full pl-4 pr-24 flex flex-col justify-between leading-normal">
