--- a/website2/views/settings.ejs
+++ b/website2/views/settings.ejs
@@ -6,8 +6,32 @@
   <title>Settings Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-
+<body class="bg-back flex flex-col justify-start items-center min-h-screen">
+    <!-- Navbar -->
+    <div class="navbar h-24 w-full flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-lg shadow-gray-600 px-4">
+        <!-- Settings Icon --> 
+        <img
+        src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
+        class="object-contain object-left flex ml-8 mr-20 h-12"
+        />
+        <!--logo-->
+        <img 
+        src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
+        class="object-contain h-full"
+        />
+        <!--text and search icon-->
+        <div class="flex flex-row">
+        <img
+            src="https://cdn.discordapp.com/attachments/1280355262976360490/1290168712434941952/Magnifying_Glass.png?ex=66fb7abf&is=66fa293f&hm=bda1474115b60cad013937e3348c359704c6cec6dc9c67886fa31112daf135cd&"
+            class="object-contain object-right mr-8 h-12"
+        />
+        <img
+            src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
+            class="object-contain object-right mr-8 h-12"
+            />
+        </div>
+    </div>
+    
   <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold mb-6 text-gray-800">Settings</h1>
 
